tigergraph-rest-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tigergraph-rest
  namespace: tigergraph
spec:
  to:
    kind: Service
    name: test-tigergraph-cluster-rest-external-service
    weight: 100
  port:
    targetPort: rest
  tls:
    termination: edge
  wildcardPolicy: None
